# words-with-toddlers

./: Cargo.toml  README.md  Swoosh.m4r  test_compound.rs
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
api/spec/: openapi.yaml
desktop/: Cargo.toml  README.md  app_icon.icns
desktop/src/: app.rs  audio.rs  celebration.rs  config.rs  dictionary.rs  discovered_word.rs  grade_level.rs  main.rs  message.rs  session.rs  speech.rs  system_sound.rs  tic_tac_toe.rs  word_challenge.rs  word_list_loader.rs
desktop/src/kiosk_mode/: macos.rs  mod.rs  permission.rs  types.rs
desktop/src/utils/: color.rs
desktop/src/word_lists/: dolch_first.txt
ios/: README.md  create_xcode_project.sh
ios/WordsWithToddlers.xcodeproj/: project.pbxproj
ios/WordsWithToddlers/WordsWithToddlers/: Info.plist  WordsWithToddlersApp.swift
ios/WordsWithToddlers/WordsWithToddlers/Models/: AppConfig.swift  Celebration.swift  ChallengeMode.swift  DiscoveredWord.swift  GradeLevel.swift  Letter.swift  Session.swift  WordChallenge.swift
ios/WordsWithToddlers/WordsWithToddlers/Services/: AudioPlayer.swift  ConfigService.swift  DictionaryService.swift  SessionService.swift  SpeechService.swift  WordListLoader.swift
ios/WordsWithToddlers/WordsWithToddlers/Utilities/: ColorUtils.swift
shared/word_lists/: fry_401_500.txt
src/: app.rs  audio.rs  celebration.rs  config.rs  letter.rs  main.rs  message.rs  session.rs  system_sound.rs  toddler_words.txt  word_list_loader.rs
src/utils/: color.rs
src/word_lists/: dolch_primer.txt  fry_001_100.txt
(+10 files in other folders)
